//
// Copyright 2017 Midokura SARL
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

package org.midonet.cluster.models;
option java_package = "org.midonet.cluster.models";
option java_outer_classname = "Zoom";

message ZoomProvenance {
    optional string product_version = 1;
    optional string product_commit = 2;
    optional int32 change_owner = 3;
    optional int32 change_type = 4;
    optional int32 change_version = 5;
}

message ZoomObject {
    repeated ZoomProvenance provenance = 1;
}
